# mcp-server-sharepoint

./: pyproject.toml  setup.py
auth/: sharepoint_auth.py
tools/: site_tools.py
utils/: document_processor.py  graph_client.py
