[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sharepoint-mcp"
version = "0.1.0"
authors = [
    { name = "Luther Systems", email = "support@luthersystems.com" },
]
description = "SharePoint Model Context Protocol (MCP) server for LLM applications"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# All required dependencies including document processing libraries
dependencies = [
    "mcp>=0.1.0",
    "msal>=1.20.0",
    "requests>=2.28.0",
    "pandas>=1.5.0",
    "python-docx>=0.8.11",
    "PyPDF2>=3.0.0",
    "openpyxl>=3.1.0",
    "python-dotenv>=0.21.0",
]

[project.optional-dependencies]
cli = [
    "mcp[cli]",
]
dev = [
    "pytest>=7.0.0",
    "black>=22.3.0",
    "ruff>=0.0.169",
]

[project.urls]
Homepage = "https://github.com/luthersystems/mcp-server-sharepoint"
Repository = "https://github.com/luthersystems/mcp-server-sharepoint"

[project.scripts]
sharepoint-mcp = "server:main"

[tool.setuptools]
py-modules = ["server"]
packages = ["auth", "config", "resources", "tools", "utils"]

